unpackaged/main/default/objects/Integration_Log__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint of the external system/application</description>
    <label>Endpoint</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>