unpackaged/main/default/objects/Integration_Log__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <description>Will hold description of the type of integration job</description>
    <label>Job</label>
    <length>255</length>
    <type>Text</type>
</CustomField>