unpackaged/main/default/objects/Integration_Log__c/fields/Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Code__c</fullName>
    <description>Code returned OR sent to the external system/application after processing request</description>
    <label>Response Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>