unpackaged/main/default/objects/Integration_Log__c/fields/Salesforce_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Record_ID__c</fullName>
    <description>Id of the Salesforce record off of which the integration was triggered</description>
    <label>Salesforce Record ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>