unpackaged/main/default/objects/Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( Success__c , 'SUCCESS', 'ERROR')</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>