unpackaged/main/default/objects/Integration_Log__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if the callout was successful or not</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>